--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,17 @@ target 'calendy' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  # Add modular headers for Firebase dependencies
+  $RNFirebaseAsStaticFramework = true
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'FirebaseInstallations', :modular_headers => true
+  pod 'FirebaseMessaging', :modular_headers => true
+  pod 'GoogleDataTransport', :modular_headers => true
+  pod 'PromisesObjC', :modular_headers => true
+
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
